More test fixes and remove last Junit 4